Bug 91066 - FILESAVE: XLSX "Condensed" character spacing is not preserved after roundtrip.
Summary: FILESAVE: XLSX "Condensed" character spacing is not preserved after roundtrip.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Yogesh Bharate
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-04 07:01 UTC by Yogesh Bharate
Modified: 2015-05-13 08:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Condensed spacing (9.35 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-05-04 07:01 UTC, Yogesh Bharate
Details
Difference in Original and RT files (126.16 KB, image/png)
2015-05-04 07:26 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2015-05-04 07:01:18 UTC
Created attachment 115296 [details]
Condensed spacing

Problem Description :
- character spacing type "Condensed" (i.e spacing between individual characters or letters) is not preserved after roundtrip.


Step to reproduce:
1. Open attached document in LO.
2. Save as xlsx.
3. open roundtrip file in excel 2010.

Expected behavior :
Spacing type Condensed must preserved.

Actual behavior:
Spacing Condensed is not preserved.
Comment 1 Yogesh Bharate 2015-05-04 07:01:57 UTC
XML Difference :
Original:
<a:rPr lang="en-IN" sz="6000" b="1" kern="0" spc="-1000" baseline="0">

After Roundtrip:
<a:rPr b="1" lang="en-IN" sz="6000" strike="noStrike">

spc="-1000" is missing in roundtripped file.
Comment 2 Yogesh Bharate 2015-05-04 07:26:37 UTC
Created attachment 115297 [details]
Difference in Original and RT files
Comment 3 A (Andy) 2015-05-05 17:29:54 UTC
Reproducible with LO 4.4.2.2, Win 8.1
Comment 4 Commit Notification 2015-05-07 16:00:17 UTC
yogesh.bharate001 committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ffed8635acd55a5989bf9a0f4bc9c20b0acd945

tdf#91066: Condensed Character Spacing i.e spc(negative value) is not exported after RT.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 darshan.gandhi 2015-05-13 08:16:21 UTC
Verified on below version of LO, and looks like its no more reproducible on LO.

Version: 5.0.0.0.alpha1+ (x64)
Build ID: ddb3c4531c657cda6ae20dd950020cea1d12ba2e
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-05-11_00:25:02

Test Results; "Condensed" character spacing is not preserved after roundtrip