tdf#91066: Condensed Character Spacing i.e spc is not exported after RT.

Problem Description:
- Condensed character spacing i.e Spacing between characters/letters (negative value)
is not preserved after roundtrip.

XML Difference:
XML Difference :
Original:
<a:rPr lang="en-IN" sz="6000" b="1" kern="0" spc="-1000" baseline="0">

After Roundtrip:
<a:rPr b="1" lang="en-IN" sz="6000" strike="noStrike">

spc="-1000" is missing in roundtripped file.

Change-Id: I02edbb31375c2406a6e39873b7b886f4786a3758
Solution: Added support for Condensed Character Spacing.